--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <section class="color_display">
+      <div class="color_select">
+        <h1>Select color:</h1>
+        <input type="color" id="color_value" />
+      </div>
+      <div class="color_box"></div>
+      <div class="color_codes">
+        <h2>HEX:</h2>
+        <div class="hex_code"></div>
+      </div>
+      <div class="color_codes">
+        <h2>RGB:</h2>
+        <div class="rgb_code"></div>
+      </div>
+      <div class="color_codes">
+        <h2>HSL:</h2>
+        <div class="hsl_code"></div>
+      </div>
+    </section>
+    <section class="color_wheel"></section>
     <script src="script.js"></script>
   </body>
 </html>
